--- a/roth-lib-java-service/pom.xml
+++ b/roth-lib-java-service/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 		    <groupId>org.eclipse.jetty</groupId>
 		    <artifactId>jetty-http</artifactId>
-		    <version>9.4.53.v20231009</version>
+		    <version>10.0.18</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlet -->
 		<dependency>
